[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/menu.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/flatDark34.png" type="Texture" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/koparka1.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/transport1.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/ARLRDBD.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/koparka1bought.jpg" type="Texture" id=7]
[ext_resource path="res://Assets/transport1bought.jpg" type="Texture" id=8]
[ext_resource path="res://Assets/obamiumdrilloff.jpg" type="Texture" id=9]
[ext_resource path="res://Assets/obamiumdrill.jpg" type="Texture" id=10]
[ext_resource path="res://Assets/purchase.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/lidlracingoff.jpg" type="Texture" id=12]
[ext_resource path="res://Assets/lidlracing.jpg" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite" parent="canvas"]
position = Vector2( 512, 300 )
scale = Vector2( 4.51101, 2.91262 )
texture = ExtResource( 1 )

[node name="cashAmount" type="RichTextLabel" parent="canvas"]
margin_left = 16.0
margin_top = 552.0
margin_right = 688.0
margin_bottom = 584.0
custom_fonts/normal_font = SubResource( 1 )

[node name="coalAmount" type="RichTextLabel" parent="canvas"]
margin_left = 16.0
margin_top = 512.0
margin_right = 688.0
margin_bottom = 544.0
custom_fonts/normal_font = SubResource( 1 )

[node name="mine1" type="TextureButton" parent="canvas"]
margin_left = 40.0
margin_top = 24.0
margin_right = 320.0
margin_bottom = 176.0
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 7 )
expand = true

[node name="transport1" type="TextureButton" parent="canvas"]
margin_left = 40.0
margin_top = 280.0
margin_right = 320.0
margin_bottom = 432.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 8 )
expand = true

[node name="obamiumdrills" type="TextureButton" parent="canvas"]
margin_left = 328.0
margin_top = 24.0
margin_right = 608.0
margin_bottom = 176.0
rect_scale = Vector2( 0.379649, 0.661879 )
texture_normal = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="menu" type="TextureButton" parent="canvas"]
margin_left = 968.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 56.0
texture_normal = ExtResource( 2 )

[node name="mineCost" type="RichTextLabel" parent="canvas"]
margin_left = 40.0
margin_top = 176.0
margin_right = 376.0
margin_bottom = 232.0
rect_pivot_offset = Vector2( -456, -16 )

[node name="rikszaCost" type="RichTextLabel" parent="canvas"]
margin_left = 40.0
margin_top = 432.0
margin_right = 376.0
margin_bottom = 488.0

[node name="drillCost" type="RichTextLabel" parent="canvas"]
margin_left = 328.0
margin_top = 160.0
margin_right = 504.0
margin_bottom = 176.0
rect_pivot_offset = Vector2( -696, 144 )

[node name="obamiumdrill" type="RichTextLabel" parent="canvas"]
margin_left = 328.0
margin_top = 128.0
margin_right = 664.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -456, -16 )
text = "Obamium drill:
+2 coal/s |+1 pollution"
__meta__ = {
"_editor_description_": ""
}

[node name="placeholderText" type="RichTextLabel" parent="canvas"]
margin_left = 592.0
margin_top = 256.0
margin_right = 1000.0
margin_bottom = 384.0
text = "Current coal value: $3  per coal
later you will be able to increase
it to like idk 5 with upgrades

Pollution is taxed every 30 seconds!!!
for example 1 pollution is -1$ every 30 sec

THIS IS A PLACEHOLDER"

[node name="lidlracing" type="TextureButton" parent="canvas"]
margin_left = 336.0
margin_top = 288.0
margin_right = 448.0
margin_bottom = 400.0
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="lidlracing2" type="RichTextLabel" parent="canvas"]
margin_left = 320.0
margin_top = 400.0
margin_right = 656.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( -456, -16 )
text = "LIDL racing equipment:
 -0.5s shipping interval | +1 cost | +0.2 loss"
__meta__ = {
"_editor_description_": ""
}

[node name="lidlCost" type="RichTextLabel" parent="canvas"]
margin_left = 320.0
margin_top = 432.0
margin_right = 496.0
margin_bottom = 448.0

[node name="purchase" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[connection signal="pressed" from="canvas/mine1" to="." method="_on_mine1_pressed"]
[connection signal="pressed" from="canvas/transport1" to="." method="_on_transport1_pressed"]
[connection signal="pressed" from="canvas/obamiumdrills" to="." method="_on_obamiumdrills_pressed"]
[connection signal="pressed" from="canvas/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="canvas/lidlracing" to="." method="_on_lidlracing_pressed"]
